[workspace]
resolver = "2"
members  = [
  "bin"
]

[workspace.package]
version       = "0.0.0"
authors       = ["Rhaki"]
edition       = "2021"
rust-version  = "1.81"

[workspace.dependencies]
anyhow             = "1"
bip32              = "0.5"
clap               = "4"
colored            = "2"
colored_json       = "5"
dialoguer          = "0.11"
digest             = "0.10"
grug               = { git = "https://github.com/left-curve/left-curve", branch = "grug/client_traits"}
grug-client        = { git = "https://github.com/left-curve/left-curve", branch = "grug/client_traits"}
dango-client       = { git = "https://github.com/left-curve/left-curve", branch = "grug/client_traits"}
dango-genesis      = { git = "https://github.com/left-curve/left-curve", branch = "grug/client_traits"}
dango-types        = { git = "https://github.com/left-curve/left-curve", branch = "grug/client_traits" }
hex                = "0.4"
home               = "0.5"
k256               = "0.13"
rand               = "0.8"
serde              = "1"
serde_json         = "1"
tendermint-rpc     = "0.39"
toml               = "0.8"
tokio              = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
