[workspace]
members  = ["cli", "types"]
resolver = "2"

[workspace.package]
authors      = ["Rhaki"]
edition      = "2021"
rust-version = "1.81"
version      = "0.0.0"

[workspace.dependencies]
anyhow             = "1"
bip32              = "0.5"
clap               = "4"
dango-client       = { git = "https://github.com/left-curve/left-curve" }
dango-genesis      = { git = "https://github.com/left-curve/left-curve" }
dango-types        = { git = "https://github.com/left-curve/left-curve" }
dangod-types       = { path = "types" }
grug               = { git = "https://github.com/left-curve/left-curve" }
grug-client        = { git = "https://github.com/left-curve/left-curve" }
grug-pyth-types    = { git = "https://github.com/left-curve/left-curve", package = "pyth-types" }
hex                = "0.4"
home               = "0.5"
k256               = "0.13"
rand               = "0.8"
serde              = "1"
serde_json         = "1"
tokio              = "1"
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = "0.3"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = "abort"
rpath            = false
