[package]
authors      = { workspace = true }
edition      = { workspace = true }
name         = "dangod"
rust-version = { workspace = true }
version      = { workspace = true }

[[bin]]
name = "dangod"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
bip32              = { workspace = true }
clap               = { workspace = true, features = ["derive", "wrap_help"] }
dango-genesis      = { workspace = true }
dango-types        = { workspace = true }
dangod-types       = { workspace = true }
grug               = { workspace = true }
grug-client        = { workspace = true }
hex                = { workspace = true }
home               = { workspace = true }
k256               = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
dango-client = { workspace = true }
