[package]
authors      = { workspace = true }
edition      = { workspace = true }
name         = "dangod-types"
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
anyhow        = { workspace = true }
bip32         = { workspace = true }
dango-genesis = { workspace = true }
dango-types   = { workspace = true }
grug          = { workspace = true }
hex           = { workspace = true }
home          = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
